Adaptive subdivision doesn't work when using panoramic fisheye equidistant camera #49254

Closed
opened 2016-09-04 22:06:36 +02:00 by Viktor Mukayev · 7 comments

System Information
Operating system and graphics card
Windows 7 x64
Nvidia GTX570

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
2.77.3
hash: 7dc328e

Worked: (optional)

Short description of error
When using Panoramic mode camera adaptive subdivision feature doesn't work
I assume it's due to screen space calculation, since screen is very distorted

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps
bugreport.blend

**System Information** Operating system and graphics card Windows 7 x64 Nvidia GTX570 **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) 2.77.3 hash: 7dc328e Worked: (optional) **Short description of error** When using Panoramic mode camera adaptive subdivision feature doesn't work I assume it's due to screen space calculation, since screen is very distorted **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps [bugreport.blend](https://archive.blender.org/developer/F352847/bugreport.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @VictorMukayev

Added subscriber: @VictorMukayev
Member

Added subscriber: @MaiLavelle

Added subscriber: @MaiLavelle
Mai Lavelle self-assigned this 2016-09-04 22:39:08 +02:00
Member

This is a known limitation, marking as todo.

This is a known limitation, marking as todo.

This issue was referenced by blender/cycles@3b44c027a2

This issue was referenced by blender/cycles@3b44c027a2e5c5e04ade5d0fa8ecbc48f5991da5

This issue was referenced by 5bd9b12dc4

This issue was referenced by 5bd9b12dc47d6fcfb21025101b41802bb5b2edc0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49254
No description provided.